# database-builder

./: .env.sample  .gitignore  .lefthook.yml  README.md  pixi.toml  pyproject.toml
.github/workflows/: lefthook.yaml  lint.yaml  linux_toolchain_check.yaml  toolchain_check.yaml  typecheck.yaml  unit_tests.yaml
src/knowledgeplatformmanagement_generic/: __version__.py  asynctools.py  logger.py
src/knowledgeplatformmanagement_generic/data/dao/: datasink.py
src/knowledgeplatformmanagement_generic/data/extract/documents/document/: __init__.py
src/knowledgeplatformmanagement_generic/data/extract/documents/extractor/: extractor.py
src/knowledgeplatformmanagement_generic/data/extract/documents/pipeline/documents/: pipeline_documents.py
src/knowledgeplatformmanagement_generic/data/services/: __init__.py
src/knowledgeplatformmanagement_generic/data/services/llm/: __init__.py  connection_llm.py  dataaccessor_llm.py
src/knowledgeplatformmanagement_generic/data/services/qdrant/: connection_qdrant.py  dataaccessor_qdrant.py
src/knowledgeplatformmanagement_generic/data/services/typedb/: connection_typedb.py  dataaccessor_typedb.py  typeql.py
src/knowledgeplatformmanagement_generic/installer/: __main__.py  exceptions.py
src/knowledgeplatformmanagement_generic/settings/: __init__.py  paths.py
src/knowledgeplatformmanagement_generic/web/: __init__.py
src/knowledgeplatformmanagement_han/: persons.tql  schema.tql  timesheets.tql
src/knowledgeplatformmanagement_han/data/dao/: datalayer.py  dataqualityissue.py  datasink_documents.py  datasink_microsoft365.py  datasink_ubwfris.py  datasinks.py
src/knowledgeplatformmanagement_han/data/extract/: microsoft365.py  nwopen.py
src/knowledgeplatformmanagement_han/data/extract/documents/: __init__.py  proposal.py
src/knowledgeplatformmanagement_han/data/extract/documents/extractor/: extractor.py
src/knowledgeplatformmanagement_han/data/extract/documents/extractor/partner/: extractor_partner.py
src/knowledgeplatformmanagement_han/data/extract/documents/extractor/proposal/: extract_proposal.py  extractor_proposal.py
src/knowledgeplatformmanagement_han/data/extract/documents/pipeline/classifier/: __init__.py
src/knowledgeplatformmanagement_han/data/extract/documents/pipeline/classifier/queries/openai/: ProposalKeyareaClassifier-1.md
src/knowledgeplatformmanagement_han/data/extract/ubwfris/: __init__.py
src/knowledgeplatformmanagement_han/data/model/: composition.py  compositionproject.py  description.py  document.py  educationalproject.py  hoursbooked.py  hoursbudgeted.py  hoursprojected.py  hoursremaining.py  institution.py  keyarea.py  knowledgeinstitution.py  learningcommunity.py  namelike_id_employee.py  namelike_id_school.py  namelike_id_ubwcostcentre.py  namelike_name.py  operationalproject.py  participationinternal.py  person.py  personmicrosoft365.py  personubwfris.py  projectlike.py  projectlikes.py  projectmanagement.py  projectrole.py  proposal.py  provenant.py  researchproject.py  researchuniversity.py  school.py  strategicpartnership.py  subproject.py  timesheet.py  topic.py  topical.py  topical_keyarea.py  unclearproject.py  universityofappliedsciences.py
src/knowledgeplatformmanagement_han/helper/: all_entities_for_relation.tql  all_related_entities_tier1.tql  all_relations_entity_type.tql  dummy_data.tql  relations_of_entity.tql  tier1_entities-through_all_relational_supertypes.tql  whole_graph_without_attributes.tql
src/knowledgeplatformmanagement_han/installer/: __main__.py
src/knowledgeplatformmanagement_han/settings/: __init__.py  paths.py  timesheets.py
src/knowledgeplatformmanagement_han/web/: __main__.py  common.py  documents.py  microsoft365.py  ubwfris.py
tests/generic/: conftest.py
tests/generic/data/extract/documents/document/: test_entity.py
tests/generic/data/extract/documents/pipeline/documents/: test_pipeline_documents_all.py
tests/generic/data/services/typedb/: test_typeql.py
tests/generic/web/: test_stream_json_list.py
tests/han/: conftest.py
tests/han/data/dao/: test_datalayer.py
tests/han/data/extract/documents/: ProjectProposalTest.docx  test_proposal.py
tests/han/data/extract/documents/classifiers/: test_proposal_keyareaclassifier.py
tests/han/data/extract/documents/document/: test_entity.py
tests/han/data/extract/documents/extractor/proposal/: test_extractproposal.py  test_extractproposal_all.py
tests/han/data/extract/documents/pipeline/documents/: test_pipeline_documents_all.py
tests/han/data/extract/ubwfris/: data_test_timesheets_rha025a_id_to_person.py  data_test_timesheets_rha025a_id_to_projectlike.py  data_test_timesheets_rha025a_timesheets.py  test_ubwfris.py
tests/han/data/extract/ubwfris/IB630_without_booked/customXml/: item1.xml  item2.xml  itemProps1.xml  itemProps2.xml  itemProps3.xml
tests/han/data/extract/ubwfris/IB630_without_booked/docProps/: app.xml  core.xml  custom.xml
tests/han/data/extract/ubwfris/IB630_without_booked/xl/: sharedStrings.xml  styles.xml  workbook.xml
tests/han/data/extract/ubwfris/IB630_without_booked/xl/worksheets/: sheet1.xml
tests/han/data/extract/ubwfris/RHA025A/docProps/: app.xml  core.xml
tests/han/data/extract/ubwfris/RHA025A/xl/: sharedStrings.xml  styles.xml  workbook.xml
tests/han/data/extract/ubwfris/RHA025A/xl/worksheets/: sheet1.xml
tests/han/data/model/: test_model.py
tests/han/data/services/typedb/: test_typeql.py
tests/han/web/: dataqualityissues_RHA025A.json  export_powerbi_persons.json  export_powerbi_timesheets.json  persons_missing_IB630_without_booked.json  persons_missing_RHA025A.json  test_common.py  test_documents.py  test_ubwfris.py
