[build-system]
build-backend = "hatchling.build"
requires = ["hatchling==1.27.0"]

[dependency-groups]
dev = [
]

[project]
authors = [
  {email = "Sander.Maijers@han.nl", name = "Sander Maijers"},
]
classifiers = [
  "Environment :: Console",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3.12",
]

description = "Knowledge Platform Management App library"
dynamic = ["version"]
license = {text = "NONE"}
name = "knowledgeplatformmanagement-generic"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src", "src/knowledgeplatformmanagement_han", "src/knowledgeplatformmanagement_generic"]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
# keep your existing pythonpath:
# pythonpath = ["src", "src/knowledgeplatformmanagement_han", "src/knowledgeplatformmanagement_generic"]

